--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-opencv_python==4.1.1.26
-scikit_image==0.16.2
-numpy==1.17.3
-tensorflow==2.4.0
-imgaug==0.3.0
-matplotlib==3.1.1
-Pillow==7.1.2
-imageio
-streamlit
+canopy-sdk==0.9.0
+chardet==5.2.0
+pinecone-client==3.2.2
+pinecone-text==0.8.0
+python-multipart==0.0.6
+streamlit==1.33.0
